force-app/main/default/objects/Opportunity/fields/Deal_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Deal_Discount_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deal Discount Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>