force-app/main/default/objects/Opportunity/fields/Deal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>