force-app/main/default/objects/Opportunity/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>IO</fullName>
            </value>
            <value>
                <fullName>ToS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>