force-app/main/default/objects/Opportunity/fields/Deal_Type_Verity__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type_Verity__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option 1 [12 Months - No Discount]</fullName>
            </value>
            <value>
                <fullName>Option 2 [12 Months - 3 Months Free]</fullName>
            </value>
            <value>
                <fullName>Option 3 [18 Months - 6 Months Free]</fullName>
            </value>
            <value>
                <fullName>Option 4 [12 Months - 6 Months Free]</fullName>
            </value>
            <value>
                <fullName>Option 5 [24 Months - 12 Months Free]</fullName>
            </value>
            <value>
                <fullName>Full Beta [6 Month Beta]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>