force-app/main/default/objects/Opportunity/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <description>This field displays if an opportunity was delivered in full or not</description>
    <label>Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Delivery</fullName>
            </value>
            <value>
                <fullName>Under Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>