force-app/main/default/objects/Opportunity/fields/Delivery_Details__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Details__c</fullName>
    <description>This field shows additional delivery details , if necessary</description>
    <label>Delivery Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>