force-app/main/default/objects/Opportunity/fields/Demand_Supply__c.field-meta.xml
<CustomField>
    <fullName>Demand_Supply__c</fullName>
    <label>Demand / Supply</label>
    <length>180</length>
    <type>Text</type>
</CustomField>