force-app/main/default/objects/Opportunity/fields/Departments_Needed_for_Expediting__c.field-meta.xml
<CustomField>
    <fullName>Departments_Needed_for_Expediting__c</fullName>
    <description>This field displays the departments needed for expediting</description>
    <label>Departments Needed for Expediting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AdOps</fullName>
            </value>
            <value>
                <fullName>Creative/Design</fullName>
            </value>
            <value>
                <fullName>Engineering/Creative Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>