force-app/main/default/objects/Opportunity/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <label>Device Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Channel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cross Device</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Mobile/Tablet</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>