force-app/main/default/objects/Opportunity/fields/Direct_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Direct_Revenue__c</fullName>
    <description>Used for reporting</description>
    <formula>IF(ISPICKVAL( Channel__c , &quot;Direct&quot;),  Amount , null)</formula>
    <inlineHelpText>Used for reporting</inlineHelpText>
    <label>Direct Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>