force-app/main/default/objects/Opportunity/fields/Discard_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discard_Reason__c</fullName>
    <inlineHelpText>This is to be used only by Salesforce Administrator</inlineHelpText>
    <label>Discard Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>User Error</fullName>
            </value>
            <value>
                <fullName>Not a fit for GumGum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>