force-app/main/default/objects/Opportunity/fields/DMP__c.field-meta.xml
<CustomField>
    <fullName>DMP__c</fullName>
    <label>DMP</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adobe</fullName>
            </value>
            <value>
                <fullName>LiveRamp</fullName>
            </value>
            <value>
                <fullName>Lotame</fullName>
            </value>
            <value>
                <fullName>Neustar</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Premutive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>