force-app/main/default/objects/Opportunity/fields/DSP__c.field-meta.xml
<CustomField>
    <fullName>DSP__c</fullName>
    <label>DSP</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Channel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A9</fullName>
            </value>
            <value>
                <fullName>AcuityAds</fullName>
            </value>
            <value>
                <fullName>Adelphic</fullName>
            </value>
            <value>
                <fullName>Adelphic/Viant</fullName>
            </value>
            <value>
                <fullName>Adform</fullName>
            </value>
            <value>
                <fullName>Adobe</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Amobee</fullName>
            </value>
            <value>
                <fullName>Beeswax</fullName>
            </value>
            <value>
                <fullName>Blis</fullName>
            </value>
            <value>
                <fullName>Centro</fullName>
            </value>
            <value>
                <fullName>DataXu</fullName>
            </value>
            <value>
                <fullName>DeepIntent</fullName>
            </value>
            <value>
                <fullName>DV360</fullName>
            </value>
            <value>
                <fullName>DBM</fullName>
                <label>Google DV360</label>
            </value>
            <value>
                <fullName>Hawk</fullName>
            </value>
            <value>
                <fullName>MarketOne</fullName>
            </value>
            <value>
                <fullName>MediaMath</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PulsePoint</fullName>
            </value>
            <value>
                <fullName>Quantcast</fullName>
            </value>
            <value>
                <fullName>Stackadapt</fullName>
            </value>
            <value>
                <fullName>Supership</fullName>
            </value>
            <value>
                <fullName>TheTradeDesk</fullName>
            </value>
            <value>
                <fullName>Undertone</fullName>
            </value>
            <value>
                <fullName>Walmart DSP</fullName>
            </value>
            <value>
                <fullName>AppNexus</fullName>
                <label>Xandr</label>
            </value>
            <value>
                <fullName>Yahoo</fullName>
            </value>
            <value>
                <fullName>Zeta DSP</fullName>
            </value>
            <value>
                <fullName>Verizon Media</fullName>
                <isActive>false</isActive>
                <label>Verizon Media</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>