force-app/main/default/objects/Opportunity/fields/DSP_Indicator__c.field-meta.xml
<CustomField>
    <fullName>DSP_Indicator__c</fullName>
    <description>Shadow field used to show conditional value in the Sold Campaign Email template</description>
    <formula>IF(ISBLANK(TEXT(DSP__c)), &quot;N/A&quot;, TEXT(DSP__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSP Indicator</label>
    <type>Text</type>
</CustomField>