force-app/main/default/objects/Opportunity/fields/DSP_Verity__c.field-meta.xml
<CustomField>
    <fullName>DSP_Verity__c</fullName>
    <label>DSP</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A9</fullName>
            </value>
            <value>
                <fullName>AcuityAds</fullName>
            </value>
            <value>
                <fullName>Adelphic</fullName>
            </value>
            <value>
                <fullName>AdForm</fullName>
            </value>
            <value>
                <fullName>Adobe</fullName>
            </value>
            <value>
                <fullName>Amazon DSP</fullName>
            </value>
            <value>
                <fullName>Amobee</fullName>
            </value>
            <value>
                <fullName>Beeswax</fullName>
            </value>
            <value>
                <fullName>Centro</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>DV360</fullName>
            </value>
            <value>
                <fullName>Hawk</fullName>
            </value>
            <value>
                <fullName>MediaMath</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PulsePoint</fullName>
            </value>
            <value>
                <fullName>Stackadapt</fullName>
            </value>
            <value>
                <fullName>The Trade Desk</fullName>
            </value>
            <value>
                <fullName>Undertone</fullName>
            </value>
            <value>
                <fullName>Verizon DSP</fullName>
            </value>
            <value>
                <fullName>Viant</fullName>
            </value>
            <value>
                <fullName>Xandr</fullName>
            </value>
            <value>
                <fullName>Yahoo</fullName>
            </value>
            <value>
                <fullName>Zeta DSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>