force-app/main/default/objects/Opportunity/fields/eCPM_formula__c.field-meta.xml
<CustomField>
    <fullName>eCPM_formula__c</fullName>
    <description>This field calculates the CPM Amount divided by the quantity of impressions</description>
    <formula>If( 
   CPM_Amount__c &gt; 0,
   CPM_Amount__c / (CPM_Quantity__c / 1000),
   0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eCPM Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>