force-app/main/default/objects/Opportunity/fields/End_Date2__c.field-meta.xml
<CustomField>
    <fullName>End_Date2__c</fullName>
    <description>Contract End Date will automatically reflect the latest schedule date from the Products tab</description>
    <label>Contract End Date</label>
    <summarizedField>OpportunityLineItem.End_Date__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>