force-app/main/default/objects/Opportunity/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Enter in the End date of the campaign</description>
    <inlineHelpText>To edit this date, simply ensure that the product end dates are correct. This field will reflect the latest end date of the products.</inlineHelpText>
    <label>End Date (old)</label>
    <type>Date</type>
</CustomField>