force-app/main/default/objects/Opportunity/fields/End_Date_AdManager__c.field-meta.xml
<CustomField>
    <fullName>End_Date_AdManager__c</fullName>
    <description>End Date for Ad Manager Details</description>
    <label>End Date (AdManager)</label>
    <type>Date</type>
</CustomField>