force-app/main/default/objects/Opportunity/fields/End_Timezone__c.field-meta.xml
<CustomField>
    <fullName>End_Timezone__c</fullName>
    <defaultValue>&quot;America/Los_Angeles&quot;</defaultValue>
    <label>End Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Timezone</valueSetName>
    </valueSet>
</CustomField>