force-app/main/default/objects/Opportunity/fields/Est_Monthly_Page_views__c.field-meta.xml
<CustomField>
    <fullName>Est_Monthly_Page_views__c</fullName>
    <label>Est. Monthly Page views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>