force-app/main/default/objects/Opportunity/fields/Estimates_Include_Remnant__c.field-meta.xml
<CustomField>
    <fullName>Estimates_Include_Remnant__c</fullName>
    <label>Estimates Include Remnant?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>