force-app/main/default/objects/Opportunity/fields/Event2__c.field-meta.xml
<CustomField>
    <fullName>Event2__c</fullName>
    <description>This field determines if the opportunity was an event or not</description>
    <label>Event?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>