force-app/main/default/objects/Opportunity/fields/event_targeting__c.field-meta.xml
<CustomField>
    <fullName>event_targeting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Attention has been sold on this Verity Opportunity</inlineHelpText>
    <label>Event Targeting</label>
    <type>Checkbox</type>
</CustomField>