force-app/main/default/objects/Opportunity/fields/Exception_Approval__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approval__c</fullName>
    <description>This field displays the exception status</description>
    <label>Exception Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Exception</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Exception Rejected</fullName>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Exception Approved</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Requires Re-submission</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>