force-app/main/default/objects/Opportunity/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>This field displays the exception type if needed</description>
    <inlineHelpText>If an exception is needed, select the type and filling the exception description, then submit for approval.</inlineHelpText>
    <label>Exception Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Above Max # of Unit Types Included</fullName>
            </value>
            <value>
                <fullName>Below Floor Rates</fullName>
            </value>
            <value>
                <fullName>Below minimum spend (High Impact)</fullName>
            </value>
            <value>
                <fullName>Below Minimum Spend (Overall Campaign)</fullName>
            </value>
            <value>
                <fullName>Below Minimum Spend (Research Study)</fullName>
            </value>
            <value>
                <fullName>Below minimum spend (Sponsorship)</fullName>
            </value>
            <value>
                <fullName>Cover ad serving cost and/or brand study serving fees</fullName>
            </value>
            <value>
                <fullName>Extra Creative Fees/Waiver Creative Fees</fullName>
            </value>
            <value>
                <fullName>Guarantee Campaign Performance</fullName>
            </value>
            <value>
                <fullName>Higher % Added Value Impressions</fullName>
            </value>
            <value>
                <fullName>Multiple Creative Unit Versions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Out Clause (Less than 7 days)</fullName>
            </value>
            <value>
                <fullName>Waive 3rd Party BT Up charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>