force-app/main/default/objects/Opportunity/fields/Expedited_Type__c.field-meta.xml
<CustomField>
    <fullName>Expedited_Type__c</fullName>
    <description>This field displays the expedite type</description>
    <label>Expedite Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rolling Launch</fullName>
            </value>
            <value>
                <fullName>Rush Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>