force-app/main/default/objects/Opportunity/fields/Expediting_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Expediting_Approval_Status__c</fullName>
    <description>This field displays the expedite status</description>
    <label>Expedite Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>