force-app/main/default/objects/Opportunity/fields/Finance_Pledge__c.field-meta.xml
<CustomField>
    <fullName>Finance_Pledge__c</fullName>
    <label>Pledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>