force-app/main/default/objects/Opportunity/fields/Finance_Pledge_Probability__c.field-meta.xml
<CustomField>
    <fullName>Finance_Pledge_Probability__c</fullName>
    <label>Pledge Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>