force-app/main/default/objects/Opportunity/fields/Flight_Length__c.field-meta.xml
<CustomField>
    <fullName>Flight_Length__c</fullName>
    <description>This field displays the days in which the opportunity will run</description>
    <formula>(End_Date2__c  -  Start_Date2__c)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>