force-app/main/default/objects/Opportunity/fields/ForecastedIn__c.field-meta.xml
<CustomField>
    <fullName>ForecastedIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Repurposed this field as part of ticket https://gumgum.jira.com/browse/SOP-2091</description>
    <inlineHelpText>Checking this box commits an open opportunity into a seller&apos;s &quot;Forecasted In&quot; Pledge for the current pledge cycle. The box can be checked either in Salesforce or in Clari with a bidirectional sync across both systems.</inlineHelpText>
    <label>Forecasted In</label>
    <type>Checkbox</type>
</CustomField>