force-app/main/default/objects/Opportunity/fields/FQ_to_Goal__c.field-meta.xml
<CustomField>
    <fullName>FQ_to_Goal__c</fullName>
    <formula>IF( AND( IsClosed ,  IsWon , Owner.Current_Quarter_Quota__c &gt; 0), Current_Quarter_Amount__c / Owner.Current_Quarter_Quota__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FQ % to Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>