force-app/main/default/objects/Opportunity/fields/Geo_Targeting_Complete__c.field-meta.xml
<CustomField>
    <fullName>Geo_Targeting_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geo Targeting Complete</label>
    <type>Checkbox</type>
</CustomField>