force-app/main/default/objects/Opportunity/fields/GMP_Offset_Amount__c.field-meta.xml
<CustomField>
    <fullName>GMP_Offset_Amount__c</fullName>
    <inlineHelpText>This is the amount that we are charging the buyer to
offset the emissions of this campaign. This is a pass-through cost that will be
entirely used to offset the emissions from the campaign.</inlineHelpText>
    <label>GMP Offset Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>