force-app/main/default/objects/Opportunity/fields/GMP_Offset_rate__c.field-meta.xml
<CustomField>
    <fullName>GMP_Offset_rate__c</fullName>
    <inlineHelpText>This is the CPM rate that we are charging the buyer to
offset the campaign, which will be added to the CPM of the media.
$0.10 : Use on standards IAB deals (always on) example GG Display. 
$0.25 : Core media sales
$0.00 : If the client does NOT want to off-set the campaign, and only wants to run against low-carbon sites</inlineHelpText>
    <label>GMP Offset rate</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Green_Media_Product_GMP_Campaign__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0.10</fullName>
                <label>0.10</label>
            </value>
            <value>
                <fullName>$0.25</fullName>
                <label>0.25</label>
            </value>
            <value>
                <fullName>$0.00</fullName>
                <label>0.00</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>