force-app/main/default/objects/Opportunity/fields/Google_Drive_Folder_Link_Verity__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder_Link_Verity__c</fullName>
    <label>Google Drive Folder Link_Verity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>