force-app/main/default/objects/Opportunity/fields/Green_Media_Product_GMP_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Green_Media_Product_GMP_Campaign__c</fullName>
    <inlineHelpText>This is for a sustainability buy that
we are &quot;offsetting&quot; emissions of the campaign and charging the buyer a fee
to do so. Scope3 is the current vendor for this partnership.</inlineHelpText>
    <label>Green Media Product (GMP) Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>