force-app/main/default/objects/Opportunity/fields/GroupM_Agency_Discounts__c.field-meta.xml
<CustomField>
    <fullName>GroupM_Agency_Discounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GroupM Agency Discounts</label>
    <type>Checkbox</type>
</CustomField>