force-app/main/default/objects/Opportunity/fields/GTM_Product__c.field-meta.xml
<CustomField>
    <fullName>GTM_Product__c</fullName>
    <description>The % of this Campaign that is planned to be our current GTM product offering</description>
    <inlineHelpText>Populate the estimated % of this Campaign that will be On-Platform OLV</inlineHelpText>
    <label>GTM Product %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>