force-app/main/default/objects/Opportunity/fields/Guarantee_Country__c.field-meta.xml
<CustomField>
    <fullName>Guarantee_Country__c</fullName>
    <label>Guarantee Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AF - Afghanistan</fullName>
            </value>
            <value>
                <fullName>AX - Åland Islands</fullName>
            </value>
            <value>
                <fullName>AL - Albania</fullName>
            </value>
            <value>
                <fullName>DZ - Algeria</fullName>
            </value>
            <value>
                <fullName>AS - American Samoa</fullName>
            </value>
            <value>
                <fullName>AD - Andorra</fullName>
            </value>
            <value>
                <fullName>AO - Angola</fullName>
            </value>
            <value>
                <fullName>AI - Anguilla</fullName>
            </value>
            <value>
                <fullName>AQ - Antarctica</fullName>
            </value>
            <value>
                <fullName>AG - Antigua and Barbuda</fullName>
            </value>
            <value>
                <fullName>AR - Argentina</fullName>
            </value>
            <value>
                <fullName>AM - Armenia</fullName>
            </value>
            <value>
                <fullName>AW - Aruba</fullName>
            </value>
            <value>
                <fullName>AU - Australia</fullName>
            </value>
            <value>
                <fullName>AT - Austria</fullName>
            </value>
            <value>
                <fullName>AZ - Azerbaijan</fullName>
            </value>
            <value>
                <fullName>BS - Bahamas</fullName>
            </value>
            <value>
                <fullName>BH - Bahrain</fullName>
            </value>
            <value>
                <fullName>BD - Bangladesh</fullName>
            </value>
            <value>
                <fullName>BB - Barbados</fullName>
            </value>
            <value>
                <fullName>BY - Belarus</fullName>
            </value>
            <value>
                <fullName>BE - Belgium</fullName>
            </value>
            <value>
                <fullName>BZ - Belize</fullName>
            </value>
            <value>
                <fullName>BJ - Benin</fullName>
            </value>
            <value>
                <fullName>BM - Bermuda</fullName>
            </value>
            <value>
                <fullName>BT - Bhutan</fullName>
            </value>
            <value>
                <fullName>BO - Bolivia (Plurinational State of)</fullName>
            </value>
            <value>
                <fullName>BQ - Bonaire, Sint Eustatius and Saba</fullName>
            </value>
            <value>
                <fullName>BA - Bosnia and Herzegovina</fullName>
            </value>
            <value>
                <fullName>BW - Botswana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>