force-app/main/default/objects/Opportunity/fields/Guarantee_Start__c.field-meta.xml
<CustomField>
    <fullName>Guarantee_Start__c</fullName>
    <label>Guarantee Start</label>
    <type>Date</type>
</CustomField>