force-app/main/default/objects/Opportunity/fields/GumGum_Out_By_Convenience__c.field-meta.xml
<CustomField>
    <fullName>GumGum_Out_By_Convenience__c</fullName>
    <label>GumGum Out By Convenience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
                <default>true</default>
                <label>60</label>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>