force-app/main/default/objects/Opportunity/fields/GumGum_Tracked_Revenue__c.field-meta.xml
<CustomField>
    <fullName>GumGum_Tracked_Revenue__c</fullName>
    <description>GumGum revenue synced from Ad Manager.  This is total revenue attributed to the campaign, it is not actual received revenue.</description>
    <inlineHelpText>GumGum revenue synced from Ad Manager.  This is total revenue attributed to the campaign, it is not actual received revenue.</inlineHelpText>
    <label>GumGum Tracked Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>