force-app/main/default/objects/Opportunity/fields/Has_Trial__c.field-meta.xml
<CustomField>
    <fullName>Has_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Trial</label>
    <type>Checkbox</type>
</CustomField>