force-app/main/default/objects/Opportunity/fields/High_Budget_Level__c.field-meta.xml
<CustomField>
    <fullName>High_Budget_Level__c</fullName>
    <label>High Budget Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>