force-app/main/default/objects/Opportunity/fields/ImportList__c.field-meta.xml
<CustomField>
    <fullName>ImportList__c</fullName>
    <label>ImportList</label>
    <length>255</length>
    <type>Text</type>
</CustomField>